# foreground-matting-video-mask

./: .gitignore  README.md  pyproject.toml
src/: foreground_mask.py  motion_mask_pipeline.py  optical_flow_mask.py
tests/: test_pipeline_config.py
